# scriptumone

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
scriptumone/: asgi.py  settings.py  urls.py  wsgi.py
